--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+amplify/team-provider-info.json
+
 #amplify
 amplify/\#current-cloud-backend
 amplify/.config/local-*
